SKILLWILL-99: fix result legend alignment

--- a/src/frontend/src/components/results/results.less
+++ b/src/frontend/src/components/results/results.less
@@ -109,7 +109,7 @@
   .will-level {
     flex-basis: 20%;
     padding: 0;
-    min-width: 100px;
+    min-width: 130px;
   }
 }
 .results-legend-item {
